--- a/liquidwar6/src/lib/cli/mod-http/Makefile.in
+++ b/liquidwar6/src/lib/cli/mod-http/Makefile.in
@@ -105,9 +105,9 @@ libmod_http_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(libmod_http_la_LDFLAGS) $(LDFLAGS) -o $@
 @ALLINONE_FALSE@am_libmod_http_la_rpath = -rpath $(libdir)
 libmod_http_s_la_LIBADD =
-am__objects_1 = mod-http-backend.lo mod-http-handshake.lo \
-	mod-http-info.lo mod-http-message.lo mod-http-oob.lo \
-	mod-http-setup.lo mod-http-state.lo
+am__objects_1 = mod-http-backend.lo mod-http-data.lo \
+	mod-http-handshake.lo mod-http-info.lo mod-http-message.lo \
+	mod-http-oob.lo mod-http-setup.lo mod-http-state.lo
 am_libmod_http_s_la_OBJECTS = $(am__objects_1)
 libmod_http_s_la_OBJECTS = $(am_libmod_http_s_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -323,7 +323,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ -lcurl
 noinst_LTLIBRARIES = libmod_http_s.la
-MOD_HTTP_FILES = mod-http-backend.c mod-http-handshake.c mod-http-info.c mod-http-message.c mod-http-oob.c mod-http-setup.c mod-http-state.c
+MOD_HTTP_FILES = mod-http-backend.c mod-http-data.c mod-http-handshake.c mod-http-info.c mod-http-message.c mod-http-oob.c mod-http-setup.c mod-http-state.c
 libmod_http_s_la_SOURCES = $(MOD_HTTP_FILES) 
 @ALLINONE_FALSE@lib_LTLIBRARIES = libmod_http.la
 @ALLINONE_FALSE@libmod_http_la_SOURCES = 
@@ -418,6 +418,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-http-backend.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-http-data.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-http-handshake.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-http-info.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-http-message.Plo@am__quote@
