Fixed the way liquidwar6.desktop is installed.

--- a/liquidwar6/pkg/Makefile.am
+++ b/liquidwar6/pkg/Makefile.am
@@ -18,14 +18,9 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-EXTRA_DIST = liquidwar6.spec liquidwar6.spec.in liquidwar6.nsi.in Info.plist.in liquidwar6.desktop.in
-
-install-data-local:
-	install -d ${datadir}/applications/
-	cp liquidwar6.desktop ${datadir}/applications/
-
-uninstall-local:
-	rm -f ${datadir}/applications/liquidwar6.desktop
+pkgdata_DATA = liquidwar6.desktop
+pkgdatadir = $(datadir)/applications
+EXTRA_DIST =  $(pkgdata_DATA) liquidwar6.spec liquidwar6.spec.in liquidwar6.nsi.in Info.plist.in liquidwar6.desktop.in
 
 distclean-local:
 	rm -f @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
