--- a/liquidwar6/src/lib/p2p/Makefile.in
+++ b/liquidwar6/src/lib/p2p/Makefile.in
@@ -91,11 +91,12 @@ am__liquidwar6p2p_test_SOURCES_DIST = p2p-testmain.c
 liquidwar6p2p_test_OBJECTS = $(am_liquidwar6p2p_test_OBJECTS)
 @ALLINONE_FALSE@am__DEPENDENCIES_1 = ../dyn/libdyn.la
 @FULLSTATIC_FALSE@liquidwar6p2p_test_DEPENDENCIES = libp2p.la \
-@FULLSTATIC_FALSE@	../cli/libcli.la ../srv/libsrv.la \
-@FULLSTATIC_FALSE@	../msg/libmsg.la ../nod/libnod.la \
-@FULLSTATIC_FALSE@	../net/libnet.la $(am__DEPENDENCIES_1) \
-@FULLSTATIC_FALSE@	../cfg/libcfg.la ../hlp/libhlp.la \
-@FULLSTATIC_FALSE@	../glb/libglb.la ../sys/libsys.la
+@FULLSTATIC_FALSE@	../dat/libdat.la ../cli/libcli.la \
+@FULLSTATIC_FALSE@	../srv/libsrv.la ../msg/libmsg.la \
+@FULLSTATIC_FALSE@	../nod/libnod.la ../net/libnet.la \
+@FULLSTATIC_FALSE@	$(am__DEPENDENCIES_1) ../cfg/libcfg.la \
+@FULLSTATIC_FALSE@	../hlp/libhlp.la ../glb/libglb.la \
+@FULLSTATIC_FALSE@	../sys/libsys.la
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -338,7 +339,7 @@ libp2p_la_SOURCES = p2p-clioob.c p2p-data.c p2p-db.c p2p-explore.c p2p-flush.c p
 libp2pdir = $(includedir)/@PACKAGE_TARNAME@/p2p
 libp2p_HEADERS = p2p.h
 @FULLSTATIC_FALSE@liquidwar6p2p_test_SOURCES = p2p-testmain.c
-@FULLSTATIC_FALSE@liquidwar6p2p_test_LDADD = libp2p.la ../cli/libcli.la ../srv/libsrv.la ../msg/libmsg.la ../nod/libnod.la ../net/libnet.la $(LW6DYN_LIB) ../cfg/libcfg.la ../hlp/libhlp.la ../glb/libglb.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
+@FULLSTATIC_FALSE@liquidwar6p2p_test_LDADD = libp2p.la ../dat/libdat.la ../cli/libcli.la ../srv/libsrv.la ../msg/libmsg.la ../nod/libnod.la ../net/libnet.la $(LW6DYN_LIB) ../cfg/libcfg.la ../hlp/libhlp.la ../glb/libglb.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 EXTRA_DIST = p2p-internal.h
 all: all-am
 
