started to implement message compression

--- a/liquidwar6/src/lib/msg/Makefile.am
+++ b/liquidwar6/src/lib/msg/Makefile.am
@@ -19,10 +19,10 @@
 # Contact author        : ufoot@ufoot.org
 
 AM_CFLAGS = @LW6_CFLAGS@
-AM_LDFLAGS = @LW6_LDFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ -lz
 
 noinst_LTLIBRARIES = libmsg.la
-libmsg_la_SOURCES = msg-oob.c msg-test.c msg-utils.c msg-word.c
+libmsg_la_SOURCES = msg-oob.c msg-test.c msg-utils.c msg-word.c msg-z.c
 libmsgdir= $(includedir)/@PACKAGE_TARNAME@/msg
 libmsg_HEADERS = msg.h
 
