--- a/liquidwar6/src/lib/msg/Makefile.in
+++ b/liquidwar6/src/lib/msg/Makefile.in
@@ -79,7 +79,8 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libmsg_la_LIBADD =
-am_libmsg_la_OBJECTS = msg-oob.lo msg-test.lo msg-utils.lo msg-word.lo
+am_libmsg_la_OBJECTS = msg-oob.lo msg-test.lo msg-utils.lo msg-word.lo \
+	msg-z.lo
 libmsg_la_OBJECTS = $(am_libmsg_la_OBJECTS)
 am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libmsgdir)"
 PROGRAMS = $(libexec_PROGRAMS)
@@ -324,9 +325,9 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@
-AM_LDFLAGS = @LW6_LDFLAGS@
+AM_LDFLAGS = @LW6_LDFLAGS@ -lz
 noinst_LTLIBRARIES = libmsg.la
-libmsg_la_SOURCES = msg-oob.c msg-test.c msg-utils.c msg-word.c
+libmsg_la_SOURCES = msg-oob.c msg-test.c msg-utils.c msg-word.c msg-z.c
 libmsgdir = $(includedir)/@PACKAGE_TARNAME@/msg
 libmsg_HEADERS = msg.h
 @FULLSTATIC_FALSE@liquidwar6msg_test_SOURCES = msg-testmain.c
@@ -434,6 +435,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-testmain.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-utils.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-word.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg-z.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
