--- a/liquidwar6/doc/Makefile.selfdoc
+++ b/liquidwar6/doc/Makefile.selfdoc
@@ -45,8 +45,8 @@ $(srcdir)/map-style-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
 $(srcdir)/hooks-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
 	echo selfdoc hooks && for k in `$(top_builddir)/src/liquidwar6 --list-hooks` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/hooks-selfdoc.texi
 
-$(srcdir)/tuning-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
-	echo selfdoc tuning && for k in `$(top_builddir)/src/liquidwar6 --list-tuning` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/tuning-selfdoc.texi
+$(srcdir)/advanced-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+	echo selfdoc advanced && for k in `$(top_builddir)/src/liquidwar6 --list-advanced` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 default $$k ; done > $(srcdir)/advanced-selfdoc.texi
 
 $(srcdir)/funcs-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
 	echo selfdoc funcs && for k in `$(top_builddir)/src/liquidwar6 --list-funcs` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 func $$k ; done > $(srcdir)/funcs-selfdoc.texi
