--- a/liquidwar6/pkg/Makefile.in
+++ b/liquidwar6/pkg/Makefile.in
@@ -292,7 +292,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 pkgdata_DATA = liquidwar6.desktop
-EXTRA_DIST = $(pkgdata_DATA) liquidwar6.spec liquidwar6.spec.in liquidwar6.nsi.in Info.plist.in liquidwar6.desktop.in
+EXTRA_DIST = $(pkgdata_DATA) liquidwar6.spec liquidwar6d
 
 # Rules below concern packaging, do not use them on untrusted
 # computers, as they use /tmp and assume they are the only scripts
